[REFACTOR] 코드리뷰 반영 - 개선 제안(네이밍·일관성·품질·테스트) (#118) (#120)
* refactor(global): 예외 핸들러 위치 정합·4xx 로깅·로깅필터/S3/CORS 정리·ErrorCode 추가 (#118)

* refactor(dto): 응답 DTO 접미사(~DTO) 정합 개명 및 관련 서비스 정리 (#118)

* refactor(essay): 자기소개서 검증 실패를 도메인별 ErrorCode로 세분화 (#118)

* refactor(applicant): 트랜잭션 애너테이션 통일·create 201·엔티티/테스트 정리 (#118)

* refactor(auth): 로그아웃 관대 처리·이메일 실패 로깅·죽은 코드 제거 (#118)

* refactor(jobposting): DTO 검증/Swagger 정리·이벤트 중복 filter 제거 (#118)

* refactor: 소규모 정합성 개선(company/notification/interview/analysis/dashboard/matching) (#118)

* docs: README 개편 및 아키텍처 SVG 다이어그램 추가